--- a/atomo-fixo.html
+++ b/atomo-fixo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Teste Átomo</title>
+		<title>Teste Átomo Fixo</title>
 	</head>
 	<body topmargin="0" leftmargin="0" marginheight="0" marginwidth="0" style="background-color: #e7e7e9; font-size: 14px; font-family: Verdana, sans-serif; text-align: center;">
 		<table id="main-container" style="background-color:#fff; border-color:#e7e7e9; border-width:10px; border-style:solid; margin:0 auto;" width="593" cellpadding="0" cellspacing="0" border="0">
